# travel-planner

./: .gitignore  .mise.toml  Makefile  pyproject.toml  requirements.txt
http/: travel-planner.http
src/: hello_world.py  journal.py  main.py
src/journal/: hello_world.py  journal.py  main.py  models.py  weather_client.py
src/journal/repository/: db_migrator.py  journal_repository.py  migrate_db.py
src/journal/repository/migrations/: 001_create_journal_entries.py  002_adding_weather_to_journal_entries.py
tests/: test_hello_world.py  test_travel_journal.py  test_update_item.py  test_weather_client.py
tests/journal/repository/: test_db_journal_repository.py
